After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698421 - After changing computer name, the ssh command in the popup dialog is not changed
After changing computer name, the ssh command in the popup dialog is not changed
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sharing
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.10
Depends on:
Blocks:
 
 
Reported: 2013-04-19 23:48 UTC by Carlos Soriano
Modified: 2013-10-04 09:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sharing: ensure the hostname in labels is updated (2.42 KB, patch)
2013-10-03 09:48 UTC, Thomas Wood
committed Details | Review

Description Carlos Soriano 2013-04-19 23:48:34 UTC
To reproduce:
change computer name to XYZactivate sharing
activate remote login
"allow remote...with ssh localhost.localdomain"
If I'm not wrong, the text must display "allow remote...with ssh XYZ"
Comment 1 Thomas Wood 2013-10-03 09:48:29 UTC
Created attachment 256350 [details] [review]
sharing: ensure the hostname in labels is updated

This patch updates the labels when a dialog opens. However, the mDNS hostname
may not have been updated after the hostname has changed and therefore the "old"
hostname will still be displayed.
Comment 2 Bastien Nocera 2013-10-03 15:59:30 UTC
Review of attachment 256350 [details] [review]:

That looks fine.
Comment 3 Thomas Wood 2013-10-04 09:13:35 UTC
Attachment 256350 [details] pushed as 1288d64 - sharing: ensure the hostname in labels is updated