sharing: ensure the hostname in labels is updated

https://bugzilla.gnome.org/show_bug.cgi?id=698421